--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,27 +1,21 @@
-pipeline{
+pipeline {
     agent any
 
-    tools{
-    maven 'maven'
-    }
-
     stages {
-        stages('test'){
+        stage('clone') {
             steps {
                 git 'https://github.com/Veerabommunikhil/hello-world.git'
             }
-
-        stage('build'){
+        }
+        stage('build') {
             steps {
                 sh 'mvn package'
             }
-            
-        stage('test'){
+        }
+        stage('test') {
             steps {
                 sh 'mvn test'
             }
         }
-        }
-        }
     }
-}
+}        
