--- a/jenkinsfile
+++ b/jenkinsfile
@@ -16,6 +16,13 @@ pipeline {
                 sh 'mvn test'
             }
         }
+        stage('deploy-tomcat') {
+            steps {
+                sshagent(['tomcat8']) {
+                   sh 'scp -i Sample.pem /var/lib/jenkins/workspace/pipeline/webapp/target/*.war ec2-user@54.145.169.213:~/apache-tomcat-8.5.90/webapps' 
+                }
+            }
+        }
         
     }
 }        
