--- a/jenkinsfile
+++ b/jenkinsfile
@@ -19,7 +19,7 @@ pipeline {
         stage('deploy-tomcat') {
             steps {
                 sshagent(['tomcat8']) {
-                   sh 'scp -i Sample.pem /var/lib/jenkins/workspace/pipeline/webapp/target/*.war ec2-user@54.145.169.213:~/apache-tomcat-8.5.90/webapps' 
+                   sh 'scp -i Sample.pem /var/lib/jenkins/workspace/pipeline/webapp/target/*.war ec2-user@54.145.169.213:~/opt/apache-tomcat-8.5.90/webapps' 
                 }
             }
         }
